openshift-config/mc-shepherd.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mc-sheperd
  name: mc-sheperd
  namespace: myproject
spec:
  clusterIP: 172.30.127.76
  ports:
    - name: 11211-11211
      port: 11211
      protocol: TCP
      targetPort: 11211
  selector:
    deploymentConfig: datagrid-app
  sessionAffinity: None
  type: ClusterIP
