openshift-config/services-8888.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
    openshift.io/generated-by: OpenShiftNewApp
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  labels:
    app: datagrid73-basic
    application: datagrid-app
    template: datagrid73-basic
  name: datagrid-app-ping
  namespace: myproject
spec:
  clusterIP: None
  ports:
    - name: ping
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    deploymentConfig: datagrid-app
  sessionAffinity: None
  type: ClusterIP
