openshift-config/ua-shepherd-openshift.yml
apiVersion: v1
kind: Template
labels:
  app: shepherd
  template: shepherd
message: |-
  This template will create a shepherd deployment.
metadata:
  annotations:
    iconClass: icon-drupal
    openshift.io/display-name: Shepherd
    description: Provide a template that deploys an instance of the shepherd distribution.
    tags: php,drupal
    template.openshift.io/documentation-url: 'https://gitlab.adelaide.edu.au/web-team/ua-shepherd'
    template.openshift.io/long-description: This template defines resources needed
      to run the Shepherd site manager.
    template.openshift.io/provider-display-name: University of Adelaide
    template.openshift.io/support-url: 'https://github.com/universityofadelaide/shepherd/issues'
  name: shepherd
objects:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-svc
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: shepherd-web-dc
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-route
  spec:
    host: ${APPLICATION_DOMAIN}
    to:
      kind: Service
      name: shepherd-web-svc
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-is
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-bc
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: 'shepherd-web-is:latest'
    postCommit: {}
    source:
      git:
        ref: ${SOURCE_REPOSITORY_REF}
        uri: ${SOURCE_REPOSITORY_URL}
      type: Git
      secrets:
      - destinationDir: /code
        secret:
          name: ${SOURCE_SECRET}
      sourceSecret:
        name: ${SOURCE_SECRET}
    strategy:
      sourceStrategy:
        from:
          kind: DockerImage
          name: uofa/s2i-shepherd-drupal:composer2
        pullSecret:
          name: ${SOURCE_SECRET}
        forcePull: true
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
    - github:
        secret: ${GITHUB_TRIGGER_SECRET}
      type: GitHub
    - generic:
        secret: ${GENERIC_TRIGGER_SECRET}
      type: Generic
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-shared
  spec:
    storageClassName: bronze
    accessModes:
      - ReadWriteMany
    resources:
      requests:
        storage: 5Gi
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: shepherd
    name: shepherd-web-dc
  spec:
    replicas: 1
    selector:
      name: shepherd-web-dc
    strategy:
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/container.shepherd.image.entrypoint: '["/usr/local/s2i/run"]'
        labels:
          name: shepherd-web-dc
        name: shepherd-web-dc
      spec:
        containers:
        - env:
          - name: DATABASE_HOST
            value: ${DATABASE_HOST}
          - name: DATABASE_NAME
            value: ${DATABASE_NAME}
          - name: DATABASE_PORT
            value: ${DATABASE_PORT}
          - name: DATABASE_USER
            value: ${DATABASE_USER}
          - name: DATABASE_PASSWORD_FILE
            value: ${DATABASE_PASSWORD_FILE}
          - name: PRIVATE_DIR
            value: /shared/private
          - name: PUBLIC_DIR
            value: /shared/public
          - name: TMP_DIR
            value: /shared/tmp
          - name: MEMCACHE_ENABLED
            value: ${MEMCACHE_ENABLED}
          - name: MEMCACHE_HOST
            value: ${REDIS_HOST}
          - name: SHEPHERD_INSTALL_PROFILE
            value: ${SHEPHERD_INSTALL_PROFILE}
          image: 'shepherd-web-is:latest'
          name: shepherd-web
          ports:
          - containerPort: 8080
          resources:
            limits:
              memory: ${MEMORY_LIMIT_WEB}
          volumeMounts:
            - name: shepherd-web-shared
              mountPath: /shared
            - name: volume-niek8
              readOnly: true
              mountPath: /etc/secret
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        volumes:
        - name: shepherd-web-shared
          persistentVolumeClaim:
            claimName: shepherd-web-shared
        - name: volume-niek8
          secret:
            secretName: shepherd-db-password
            defaultMode: 420
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - shepherd-web
        from:
          kind: ImageStreamTag
          name: 'shepherd-web-is:latest'
      type: ImageChange
    - type: ConfigChange
parameters:
  - name: SOURCE_REPOSITORY_URL
    description: The URL of the repository with your application source code.
    required: true
    value: 'git@gitlab.adelaide.edu.au:web-team/ua-shepherd.git'
  - name: SOURCE_REPOSITORY_REF
    description: Set this to a branch name, tag or other ref of your repository if you are not using the default branch.
    required: true
    value: openshift-4.x
  - name: SOURCE_SECRET
    description: Enter the name of the pre-created passwordless secret that allows you to checkout from gitlab.
    required: true
    value: build-key
  - name: MEMORY_LIMIT_WEB
    description: Maximum amount of memory the web container can use.
    required: true
    value: 1024Mi
  - name: APPLICATION_DOMAIN
    description: The exposed hostname that will route to the Drupal service, if left blank a value will be defaulted.
    displayName: Application Hostname
  - name: DATABASE_HOST
    description: The database host to use. Change this if you do not wish to use the MySQL service deployed as part of this application.
    required: true
    value: shepherd-db-svc
  - name: DATABASE_PORT
    required: true
    value: '3306'
  - name: DATABASE_NAME
    required: true
    value: shepherd
  - name: DATABASE_USER
    required: true
    value: shepherd
  - name: DATABASE_PASSWORD_FILE
    required: true
    value: /etc/secret/DATABASE_PASSWORD
  - name: MEMCACHE_ENABLED
    description: Set to '1' for enabled, or '0' for disabled.
    required: true
    value: '1'
  - name: MEMCACHE_HOST
    description: The host to use as a redis cache.
    required: true
    value: 'memcached'
  - name: SHEPHERD_INSTALL_PROFILE
    description: The Drupal install profile to use.
    required: true
    value: shepherd
