openshift-config/jdg-allow-8778.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: jdg-allow-8778
  namespace: myproject
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8778
          protocol: TCP
  podSelector:
    matchLabels:
      application: datagrid-app
  policyTypes:
    - Ingress
