openshift-config/jdg-allow-8888.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jdg-allow-8888
  namespace: myproject
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              application: datagrid-app
  podSelector:
    matchLabels:
      application: datagrid-app
  policyTypes:
    - Ingress
